--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   background: linear-gradient(#29251c, #2c2306);
   color: #d9e2f1;
   min-height: 100vh;
+  text-align: center;
 }
 
 #main-header {
@@ -22,14 +23,15 @@ body {
 }
 
 #main-header #title {
+  font-size: 5vw;
   display: flex;
-  gap: 1rem;
+  gap: 0.9vw;
   align-items: center;
 }
 
 #main-header #title img {
-  width: 4rem;
-  height: 4rem;
+  width: 8vw;
+  height: 8vw;
   object-fit: contain;
   border-radius: 50%;
   border: 2px solid #ffc404;
@@ -41,7 +43,11 @@ body {
 }
 
 #text-button-header {
-  font-size: 100px;
+  position: fixed;
+  left: 85%;
+  display: flex;
+  align-items: center;
+  font-size: 1.5vw;
   font: inherit;
   cursor: pointer;
   background-color: transparent;
@@ -49,9 +55,17 @@ body {
   color: #ffc404;
 }
 
+#text-button-header svg{
+  width: 40%;
+}
+
+#text-button-header:hover svg path{
+  fill: #b87b00;
+}
+
 #text-button-header:hover,
 #text-button-header:active {
-  color: #ffab04;
+  color: #b87b00;
 }
 
 h1 {
@@ -218,6 +232,11 @@ h1 {
   gap: 1rem;
 }
 
+.address{
+  display: flex;
+  gap: 1rem;
+}
+
 .button {
   font: inherit;
   cursor: pointer;
@@ -257,6 +276,8 @@ h1 {
   width: 80%;
   max-width: 40rem;
   animation: fade-slide-up 0.3s ease-out forwards;
+  position:fixed;
+  top: 20%;
 }
 
 .modal::backdrop {
@@ -272,5 +293,82 @@ h1 {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+.loading-container {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: top;
+  flex-direction: column;
+  height: 100vh; /* Adjust as needed */
+  color:#ffab04;
+  font-size: x-large;
+}
+
+.loading-spinner {
+  border: 4px solid #ffab04;
+  border-top: 4px solid #1f1a09; /* Loading spinner color */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s linear infinite; /* Animation properties */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.error{
+  display: inline-block;
+  text-align: center;
+  color: #ffc404;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0.5rem 2rem;
+  margin: 0;
+  border-radius: 4px;
+}
+
+.error p{
+  font-weight: normal;
+}
+
+.error img{
+  width: 20rem;
+  height: 20rem;
+  object-fit: contain;
+  border-radius: 50%;
+  border: 2px solid #ffc404;
+}
+
+.empty-cart img{
+  width: 8rem;
+  height: 8rem;
+  object-fit: contain;
+  border-radius: 50%;
+  border: 2px solid #ffc404;
+}
+
+button:disabled {
+  background: transparent;
+  color: #555;
+  cursor: not-allowed;
+}
+
+.order-feedback-container svg{
+  height: 30%;
+  width: 30%;
+  animation: moveCar 2s linear infinite;
+}
+
+@keyframes moveCar {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
   }
 }
