--- a/src/index.css
+++ b/src/index.css
@@ -232,9 +232,18 @@ h1 {
   gap: 1rem;
 }
 
-.address{
+.address {
   display: flex;
+  flex-direction: row;
   gap: 1rem;
+}
+
+/* Media query for phone-sized displays */
+@media screen and (max-width: 600px) {
+  .address {
+    flex-direction: column;
+    align-items: center; /* Optional: Align items horizontally */
+  }
 }
 
 .button {
@@ -278,6 +287,8 @@ h1 {
   animation: fade-slide-up 0.3s ease-out forwards;
   position:fixed;
   top: 20%;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .modal::backdrop {
